# cpp-junk-parts

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  bootstrap-make.sh  bootstrap-ninja.sh
.github/workflows/: build-and-test.yml
cli/: CMakeLists.txt  pcg32-test.cc
cmake/: FormatSourcesWithClangFormat.cmake
inc/: evaluate_polynomial.h  macros.h
pc/: CMakeLists.txt  c-quartic-equation.c  cmp-function-functor-lambda.cc  cubic-equation.cc  glfw-shader.cc  glfw-texture.cc  load_messagepack.cc  parallel-examples.cc  parallelism-ts-test.cc  pcg32-test.cc  popcount.cc  qr-decomposition.cc  quartic-equation.cc  quick-select.cc  spdlog-test.cc  staticjson-example.cc  std-variant-and-concept.cc  std-variant-test.cc
script/: do-clang-tidy.sh
